--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- HTML frontend placeholder -->
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perepel61 MiniApp</title>
+</head>
+<body>
+  <h1>Добро пожаловать в магазин перепелиной продукции!</h1>
+  <p>Телеграмм-миниприложение для продажи перепелов, мяса и яиц.</p>
+</body>
+</html>
